vlib/v/checker/tests/multi_return_arg_missing_err.out
vlib/v/checker/tests/multi_return_arg_missing_err.vv:9:7: error: missing argument 3 on `t` to receive (int, int)
    7 | 
    8 | fn main() {
    9 |     t(1, g())
      |          ~~~
   10 | }
