vlib/v/checker/tests/multi_return_arg_missing_err.vv
fn t(a int, b int) {
}

fn g() (int, int) {
	return 1, 1
}

fn main() {
	t(1, g())
}
